# bankroll

./: .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  ledger.tpl.toml
example/: ledger.tpl.toml  sample.csv
src/: cli.rs  error.rs  main.rs
src/cli/: balance.rs  import.rs  register.rs
src/model/: account.rs  bank.rs  default.rs  ledger.rs  mod.rs  transaction.rs
src/model/transaction/: fund.rs  mod.rs  transaction.rs
src/util/: file.rs  parser.rs
