[package]
name = "bankroll"
version = "0.0.1"
authors = ["Daniel Tucker <gitlab@dantuck.com>"]
edition = "2018"
license = "GPL-3.0"
description = "[WIP] Financial Ledger"
keywords = ["accounting", "finance", "ledger"]
repository = "https://gitlab.com/dantuck/bankroll"
documentation = "https://docs.rs/bankroll"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
monee = "0.0.5"
chrono = "0.4.13"
ansi_term = "0.12.1"
ansi_colours = "1.0.1"
csv = "1.1.3"
